Admin panel improved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ table {
     collapse; border-spacing: 0; 
 }
 
-td, th { border: 1px solid #CCC; height: 30px; }
+td, th { border: 1px solid #CCC; height: 30px; text-align: center; }
 
 th {  
     background: #F3F3F3;
